...
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="TOy-rH-ozy">
                                        <rect key="frame" x="0.0" y="28.5" width="343" height="20.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Front Hazard Avoidance Camera" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jhh-vC-QKo">
                                                <rect key="frame" x="0.0" y="0.0" width="247" height="20.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="cameraLabel"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9gd-7b-dyz">
                                                <rect key="frame" x="255" y="0.0" width="88" height="20.5"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k8d-jC-3Jh">
                                        <rect key="frame" x="0.0" y="57" width="343" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="PhotoDetailViewController.SaveButton"/>
                                        <state key="normal" title="Save to Photo Library"/>
                                        <connections>
                                            <action selector="save:" destination="kgd-gk-9pr" eventType="touchUpInside" id="ROY-9I-JfD"/>
                                        </connections>
                                    </button>
                                </subviews>
...
                            <constraint firstItem="33C-GV-pNd" firstAttribute="top" secondItem="jW9-Pv-wBy" secondAttribute="bottom" id="bUE-tK-SGH"/>
                            <constraint firstItem="Ojm-q3-djU" firstAttribute="top" secondItem="33C-GV-pNd" secondAttribute="bottom" constant="226" id="fsC-Xg-4a4"/>
                            <constraint firstItem="33C-GV-pNd" firstAttribute="leading" secondItem="26Z-Jb-jmZ" secondAttribute="leading" id="ku0-go-1Ac"/>
                            <constraint firstItem="Ojm-q3-djU" firstAttribute="top" relation="greaterThanOrEqual" secondItem="MyK-rk-mFe" secondAttribute="bottom" constant="10" id="ymg-tv-o1t"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Title" id="4ed-4v-HFq"/>
                    <connections>
                        <outlet property="cameraLabel" destination="9gd-7b-dyz" id="dG4-JQ-QmJ"/>
                        <outlet property="detailLabel" destination="PDa-7E-DHh" id="ge4-Ld-wmV"/>
                        <outlet property="imageView" destination="33C-GV-pNd" id="GKy-q9-3KS"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="qe7-tZ-Quj" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1973.5999999999999" y="116.49175412293854"/>
...
